<resources>
    <string name="app_name">MyInventoTrack</string>
    <string name="exercise">User Name</string>
    <string name="Enter_an_exercise">Enter an Exercise</string>
    <string name="weight">Weight</string>
    <string name="Enter_a_Weight">Enter a Weight</string>
    <string name="reps">Reps</string>
    <string name="Enter_reps">Enter Reps</string>
    <string name="log">Log!</string>
    <string name="UserID">UserID</string>
    <string name="Enter_a_username">Enter username</string>
    <string name="Passowrd">Password</string>
    <string name="Enter_a_password">Enter password</string>
    <string name="create_a_new_account">NewUser</string>
    <string name="Enter_username">Enter a username</string>
    <string name="login">Login</string>
    <string name="signUp">Sign up</string>
    <string name="Invento_Track">Invento Track</string>
    <string name="returns">Returns</string>
    <string name="todays_sales">Todays Sales</string>
    <string name="new_sale">New Sale</string>
    <string name="weekly_sales">Weekly Sales</string>
    <string name="new_account">New Account</string>
    <string name="daily_sales_report">Daily Sales Report</string>
    <string name="add_remove_item">Add/Remove Item</string>
    <string name="welcome_user">Welcome User</string>
    <string name="total">Total</string>
    <string name="item">Item</string>
    <string name="payment">Payment</string>
    <string name="returns_user">Returns User</string>
    <string name="return">Return</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="return_payment">Return Payment</string>
    <string name="new_sale_user">New Sale User</string>
    <string name="over_amount">Over Amount</string>
    <string name="under_amount">Under Amount</string>
    <string name="add_item">Add Item</string>
    <string name="remove_item">Remove Item</string>
    <string name="username">Username</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="delete_user">Delete User</string>
</resources>