<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/titleAddItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/add_remove_item"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/item1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item"
        app:layout_constraintTop_toBottomOf="@id/titleAddItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/quantity1" />

    <TextView
        android:id="@+id/quantity1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        app:layout_constraintTop_toBottomOf="@id/titleAddItem"
        app:layout_constraintStart_toEndOf="@+id/item1"
        app:layout_constraintEnd_toStartOf="@+id/price1" />

    <TextView
        android:id="@+id/price1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        app:layout_constraintTop_toBottomOf="@id/titleAddItem"
        app:layout_constraintStart_toEndOf="@+id/quantity1"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        app:layout_constraintTop_toBottomOf="@+id/item1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonRemoveItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_item"
        app:layout_constraintTop_toBottomOf="@id/buttonAddItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
