<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/newAccountInputEditText"
        android:layout_width="243dp"
        android:layout_height="58dp"
        android:layout_marginBottom="512dp"
        android:hint="@string/Enter_username"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="156dp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="190dp"
        android:layout_height="105dp"
        android:layout_marginTop="136dp"
        android:text="@string/signUp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setPasswordLabelTextView" />

    <EditText
        android:id="@+id/setPasswordInputEditText"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="272dp"
        android:hint="@string/Enter_a_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/setPasswordLabelTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/setPasswordLabelTextView" />

    <TextView
        android:id="@+id/setPasswordLabelTextView"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:text="@string/Passowrd"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="242dp" />

    <EditText
        android:id="@+id/setUsernameLabelTextView"
        android:layout_width="138dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/username"
        tools:layout_editor_absoluteY="169dp" />

    <EditText
        android:id="@+id/userNameInputEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/new_user_registration"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="29dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="244dp"
        android:layout_height="51dp"
        android:layout_marginTop="15dp"
        android:text="Administrator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setPasswordInputEditText" />

    <Button
        android:id="@+id/buttonDeleteUser"
        android:layout_width="191dp"
        android:layout_height="107dp"
        android:text="@string/delete_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>