<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/newAccountInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_username"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/setPasswordInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_a_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/newAccountInputEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Administrator"
        app:layout_constraintTop_toBottomOf="@+id/setPasswordInputEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonDeleteUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
