<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/quantity2"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:text="@string/quantity"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="153dp" />

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="277dp"
        android:layout_height="138dp"
        android:layout_marginTop="76dp"
        android:text="@string/return_payment"
        app:layout_constraintTop_toBottomOf="@+id/totalPrice"
        tools:layout_editor_absoluteX="67dp" />

    <TextView
        android:id="@+id/price2"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:layout_marginEnd="32dp"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="228dp" />

    <TextView
        android:id="@+id/price3"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:layout_marginEnd="32dp"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="153dp" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="342dp" />

    <EditText
        android:id="@+id/titleReturnsUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/returns_user"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/quantity2"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:text="@string/item"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="225dp" />

    <TextView
        android:id="@+id/quantity3"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:layout_marginBottom="80dp"
        android:text="@string/quantity"
        app:layout_constraintBottom_toTopOf="@+id/totalPrice"
        tools:layout_editor_absoluteX="159dp" />

    <TextView
        android:id="@+id/item3"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:layout_marginTop="40dp"
        android:text="@string/quantity"
        app:layout_constraintTop_toBottomOf="@+id/titleReturnsUser"
        tools:layout_editor_absoluteX="159dp" />

    <TextView
        android:id="@+id/item2"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:text="@string/item"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="153dp" />

    <TextView
        android:id="@+id/item1"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:text="@string/item"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
        android:id="@+id/price1"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:layout_marginEnd="32dp"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="87dp" />

</androidx.constraintlayout.widget.ConstraintLayout>