<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/price3"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quantity3"
        tools:layout_editor_absoluteY="243dp" />

    <TextView
        android:id="@+id/price2"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quantity2"
        tools:layout_editor_absoluteY="181dp" />

    <TextView
        android:id="@+id/price1"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quantity1"
        tools:layout_editor_absoluteY="117dp" />

    <TextView
        android:id="@+id/quantity3"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:layout_marginBottom="49dp"
        android:text="@string/quantity"
        app:layout_constraintBottom_toTopOf="@+id/totalPrice"
        tools:layout_editor_absoluteX="140dp" />

    <TextView
        android:id="@+id/quantity2"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:text="@string/quantity"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="181dp" />

    <TextView
        android:id="@+id/quantity1"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:layout_marginTop="43dp"
        android:text="@string/quantity"
        app:layout_constraintTop_toBottomOf="@+id/titleNewUser"
        tools:layout_editor_absoluteX="140dp" />

    <TextView
        android:id="@+id/item3"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:text="@string/item"
        app:layout_constraintEnd_toStartOf="@+id/quantity3"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="243dp" />

    <TextView
        android:id="@+id/item2"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:text="@string/item"
        app:layout_constraintEnd_toStartOf="@+id/quantity2"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="181dp" />

    <EditText
        android:id="@+id/titleNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/new_sale_user"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="29dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:text="@string/item"
        app:layout_constraintEnd_toStartOf="@+id/quantity1"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="117dp" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="324dp" />

    <Button
        android:id="@+id/buttonPayment"
        android:layout_width="277dp"
        android:layout_height="138dp"
        android:layout_marginTop="60dp"
        android:text="@string/payment"
        app:layout_constraintTop_toBottomOf="@+id/totalPrice"
        tools:layout_editor_absoluteX="67dp" />
</androidx.constraintlayout.widget.ConstraintLayout>